--- a/Artisticly/Localizable.xcstrings
+++ b/Artisticly/Localizable.xcstrings
@@ -81,6 +81,22 @@
         }
       }
     },
+    "delete" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Delete"
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Supprimer"
+          }
+        }
+      }
+    },
     "error" : {
       "localizations" : {
         "en" : {
